--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-{% endblock %}
+{% endblock content %}
 
 {% block extra_body %}
-{% endblock %}
+{% endblock extra_body %}
