--- a/templates/profile.html
+++ b/templates/profile.html
@@ -137,7 +137,7 @@
                 {% else %}
                   <form action="{% url 'send_confirmation_email' %}"
                         method="post"
-                        class="flex-shrink-0 w-full sm:w-auto py-3">
+                        class="flex-shrink-0 w-full sm:w-auto">
                     {% csrf_token %}
                     <button type="submit"
                             class="w-full sm:w-auto inline-flex items-center gap-1 text-amber-500 text-sm bg-amber-500/10 px-4 py-1 rounded-full hover:bg-amber-500/20 transition-colors justify-center">
