refactor: remove last_activity field and adjust profile saving logic; update countdown date to IST

--- a/templates/not_active.html
+++ b/templates/not_active.html
@@ -129,7 +129,12 @@ function updateNumber(displayId, value) {
   }
 }
 
-var countDownDate = new Date("{{time}}").getTime();
+function convertToIST(date) {
+  const istOffset = 5.5 * 60 * 60 * 1000; // IST offset in milliseconds
+  return new Date(date.getTime() + istOffset);
+}
+
+var countDownDate = convertToIST(new Date("{{time}}")).getTime();
 
 function formatDate(date) {
   const options = { 
