feat: add Umami analytics script to base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,9 @@
           content="A cryptic hunt in which you would face questions in any form. You need to use hints, Google & your out-of-the-box thinking skills to solve it." />
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script defer
+            src="https://cloud.umami.is/script.js"
+            data-website-id="f43aee78-6013-4195-9116-b2041e4905d2"></script>
     <script>
       tailwind.config = {
         theme: {
