fix: reload page for banned users on answer submission error

--- a/templates/play.html
+++ b/templates/play.html
@@ -347,6 +347,9 @@ $("#answer_form").submit(function (e){
             }
         },
         error : function(response) {
+            if (response.responseJSON.banned === true) {
+                window.location.reload();
+            }
             icon.className = "ph-bold ph-warning text-xl";
             text.textContent = "Error";
             button.classList.add("!bg-amber-500/20", "!text-amber-500");
