--- a/templates/ended.html
+++ b/templates/ended.html
@@ -4,6 +4,24 @@
 {% block head_title %}Event Ended{% endblock head_title %}
 
 {% block content %}
+<style>
+  .heyform__trigger-button {
+  padding: 0.75rem 1.25rem !important;
+  border-radius: 0.75rem !important;
+  transition: all 0.3s !important;
+  font-size: 1rem !important;
+  line-height: 1.5rem !important;
+  font-weight: 700 !important;
+  background-color: rgba(23, 23, 23, 0.7) !important;
+  box-shadow: inset 0 2px 0px -0.5px rgba(255, 255, 255, 0.1) !important;
+}
+
+.heyform__trigger-button:hover {
+  background-color: #08b74f !important;
+  opacity: 1 !important;
+  color: #171717 !important;
+}
+</style>
 <div class="min-h-[80vh] flex items-center justify-center px-4">
   <div class="max-w-4xl mx-auto" data-aos="fade-up" data-aos-duration="800">
     <div class="p-5 bg-clip-padding mx-auto mb-8">
@@ -15,7 +33,31 @@
         <p class="text-xl text-neutral-300 text-center">The event has ended successfully.</p>
       </div>
     </div>
-
+        <div class="text-xl text-neutral-200 font-bold max-w-2xl mx-auto"
+         data-aos="fade-up"
+         data-aos-delay="100"
+         data-aos-duration="800">Please take a moment to fill out the feedback form below.</div>
+        <div data-heyform-id="sVvK1ozU"
+             data-heyform-type="modal"
+             data-heyform-custom-url="https://forms.fossbu.co/form/"
+             data-heyform-size="medium"
+             data-heyform-open-trigger="click"
+             data-heyform-open-delay="5"
+             data-heyform-open-scroll-percent="30"
+             data-heyform-trigger-background="#1d4ed8"
+             data-heyform-trigger-text="Open Form"
+             data-heyform-hide-after-submit="true"
+             data-heyform-auto-close="5"
+             data-heyform-username="{{ user.username }}"
+             data-heyform-lvl="{{ user.profile.current_level }}"
+          data-aos="fade-up"
+         data-aos-delay="100"
+         data-aos-duration="800">
+          <button class="heyform__trigger-button my-4 bg-green-400"
+                  type="button"
+                  onclick="HeyForm.openModal('sVvK1ozU')">Feedback Form</button>
+        </div>
+        <script src="https://www.unpkg.com/@heyform-inc/embed@latest/dist/index.umd.js"></script>
     <div class="transform transition duration-300 hover:scale-[1.01]"
          data-aos="fade-up"
          data-aos-delay="100"
@@ -27,6 +69,7 @@
           View Leaderboard
         </a>
       </div>
+      
     </div>
   </div>
 </div>
